added media queries

--- a/for_students/for_students.html
+++ b/for_students/for_students.html
@@ -29,7 +29,7 @@
         class="quotation"/>
 
       <p>
-        Practicing yoga is exactly that – a practice. More yoga will foster better clarity, greater awareness, <br> and a brighter inner light. Our flexible pricing will allow you to develop your practice at your own pace, <br> while benefiting from a variety of teachers and spaces, as well as from our magical community.
+        Practicing yoga is exactly that – a practice. More yoga will foster better clarity, greater awareness, and a brighter inner light. Our flexible pricing will allow you to develop your practice at your own pace, while benefiting from a variety of teachers and spaces, as well as from our magical community.
       </p>
 
       <h2>
@@ -37,7 +37,7 @@
       </h2>
 
       <p>
-        The price of each session depends on where you practice and the teacher’s <br> level of experience. We charge our members in units, each worth $7 <br> (including H.S.T.). For example, a beginner’s class taught by a junior teacher at <br> High Park would cost you one unit, or $7, while a power class taught by a <br> teacher with 10 years of experience at a local yoga studio would set you back <br> 2 or 3 units, and so on. We don’t charge monthly – <br> instead, you can deposit money into your account as you wish, and book <br> classes until you run out or replenish. Make sure you keep an eye out for free <br> or PWYC class offerings – there will be plenty!
+        The price of each session depends on where you practice and the teacher’s level of experience. We charge our members in units, each worth $7 (including H.S.T.). For example, a beginner’s class taught by a junior teacher at High Park would cost you one unit, or $7, while a power class taught by a teacher with 10 years of experience at a local yoga studio would set you back 2 or 3 units, and so on. We don’t charge monthly – instead, you can deposit money into your account as you wish, and book classes until you run out or replenish. Make sure you keep an eye out for free or PWYC class offerings – there will be plenty!
       </p>
 
     </div>
