--- a/for_teachers/for_teachers.html
+++ b/for_teachers/for_teachers.html
@@ -29,7 +29,7 @@
         class="quotation"/>
 
       <p>
-        We wouldn’t be able to do this without you, wise gurus. We encourage teachers of all styles, levels of experience, <br> and walks of life to join us. Send us a story about yourself, and we will get in touch <br> as soon as we can to explore ways to collaborate.
+        We wouldn’t be able to do this without you, wise gurus. We encourage teachers of all styles, levels of experience, and walks of life to join us. Send us a story about yourself, and we will get in touch as soon as we can to explore ways to collaborate.
       </p>
 
       <a href="mailto:lianacdigiorgio@gmail.com">J O I N &nbsp &nbsp T H E &nbsp &nbsp M O V E M E N T
@@ -40,7 +40,7 @@
       </h2>
 
       <p>
-        Our platform will provide you with access to a database of students who are <br> willing to pay for classes that are convenient, accessible, and affordable. <br> You will have the flexibility to lead practices in public or private spaces. If <br> you are affiliated with a studio, let us know, as we integrate studio <br> classes into our offerings. We facilitate student payments online, and <br> dispense a generous portion of the proceeds from your <br> classes directly to you.
+        Our platform will provide you with access to a database of students who are willing to pay for classes that are convenient, accessible, and affordable. You will have the flexibility to lead practices in public or private spaces. If you are affiliated with a studio, let us know, as we integrate studio classes into our offerings. We facilitate student payments online, and dispense a generous portion of the proceeds from your classes directly to you.
       </p>
 
     </div>
