--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </h1>
 
         <p>
-          Reiki in your basement. Power at your favourite studio. Yin at Bellwoods, or by Ward's Island beach. <br> The choice is yours! Join us in making yoga accessible, affordable, and convenient for everyone. <br> Join our mailing list below to learn more!
+          Reiki in your basement. Power at your favourite studio. Yin at Bellwoods, or by Ward's Island beach. The choice is yours! Join us in making yoga accessible, affordable, and convenient for everyone. Join our mailing list below to learn more!
         </p>
 
         <p>
@@ -34,7 +34,7 @@
         </p>
 
         <p>
-          Connect with teachers and students, either at studios or grassroots yoga classes <br> organized through our community. We aim to facilitate your ability to do yoga <br> in whatever manner is most conducive to developing your practice.
+          Connect with teachers and students, either at studios or grassroots yoga classes organized through our community. We aim to facilitate your ability to do yoga in whatever manner is most conducive to developing your practice.
         </p>
 
         <!-- <script>
