--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Y O G A &nbsp &nbsp F O R &nbsp &nbsp E V E R Y O N E
     </title>
   </head>
-  <body>
+  <body class = "with-background-image">
     <section class="clearfix">
     <div class="nav">
       <ul>
@@ -36,9 +36,6 @@
         <p>
           Connect with teachers and students, either at studios or grassroots yoga classes organized through our community. We aim to facilitate your ability to do yoga in whatever manner is most conducive to developing your practice.
         </p>
-
-        <!-- <script>
-          $(document).ready(function(){ -->
 
         <form>
           <label for="name">Name</label>
@@ -68,8 +65,6 @@
             </div>
           <input type="submit" value="J O I N"/>
         </form>
-        <!-- }); -->
-        <!-- // </script> -->
           <footer>
             <p>
               Check us out on:
