Bckgrd image and created div

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
     </div>
 
     <div class="container">
-      <h1>
-        Y O G A &nbsp &nbsp F O R &nbsp &nbsp E V E R Y O N E
-      </h1>
+
+      <div class="heading">
+        <h1>
+          Y O G A &nbsp &nbsp F O R &nbsp &nbsp E V E R Y O N E
+        </h1>
+      </div>
 
         <p>
           Reiki in your basement. Power at your favourite studio. Yin at Bellwoods, or by Ward's Island beach. The choice is yours! Join us in making yoga accessible, affordable, and convenient for everyone. Join our mailing list below to learn more!
