--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
         </p>
 
         <form>
-          <label for="name">Name</label>
-          <input type="text" name="user_name"/>
-          <label for="email">Email</label>
-          <input type="email" name="user_email">
-          <label for="postal_code">Postal Code</label>
-          <input type="text" name="postal_code">
+          <div class="form-lines">
+            <label for="name">Name</label>
+            <input type="text" name="user_name"/>
+          </div>
+          <div class="form-lines">
+            <label for="email">Email</label>
+            <input type="email" name="user_email">
+          </div>
+          <div class="form-lines">
+            <label for="postal_code">Postal Code</label>
+            <input type="text" name="postal_code">
+          </div>
           <div id="teacher-student">
             <label for="teacher-or-student">Are you...</label>
             <select id="teacher-or-student">
