--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </p>
 
         <p>
-          Starting at $35 a month, or $5 per class – cancel anytime!
+          Starting as low as $7 per class – cancel anytime!
         </p>
 
         <p>
